@@ -56,6 +56,7 @@ Version 1.0.xxxx (December xxth 2013)
 - Fixed: OpenZwave for windows release build
 - Fixed: Notifications for Rego6XX status (switches) were not working
 - Implemented: OpenZWave Controller node configuration (PollInterval)
+- Implemented: Initial support for EnOcean hardware (Only ESP2, protocol V2) at the moment, and switches only
 
 Version 1.0.1186 (November 16th 2013)
 - Fixed: rain week log, some top legend values did not show on the chart
